Training2の(B)の解答例

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,26 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+
+    productFlavors {
+        dev {
+            buildConfigField "String", "QIITA_API_KEY", "\"My DebugApiKey\""
+        }
+
+        staging {
+            buildConfigField "String", "QIITA_API_KEY", "\"My StagingApiKey\""
+        }
+
+        production {
+            buildConfigField "String", "QIITA_API_KEY", "\"My ProductApiKey\""
         }
     }
 }
